Fixed figures not appearing centered on smaller screens.

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -132,7 +132,7 @@ blockquote {
 
 figure {
   display: block;
-  width: 100%;
+  //width: 100%;
   height: auto;
 }
 
@@ -152,6 +152,7 @@ figcaption {
 }
 
 @include breakpoint-sm {
+
   figure.float-left,
   figure.float-right {
     max-width: 310px;
@@ -165,5 +166,4 @@ figcaption {
   .float-left {
     float: left;
   }
-
 }
